--- a/Typescript_Course/hello_Typescript/index.html
+++ b/Typescript_Course/hello_Typescript/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="app.js"></script>
-    <script src="oops.js"></script>
-
+    <script src="1_app.js"></script>
 </head>
 
 <body>
