--- a/Typescript_Course/hello_Typescript/index.html
+++ b/Typescript_Course/hello_Typescript/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="1_app.js"></script>
+    <script src="6_decorators.js" type="text/javascript"></script>
+
 </head>
 
 <body>
