--- a/Typescript_Course/hello_Typescript/index.html
+++ b/Typescript_Course/hello_Typescript/index.html
@@ -7,12 +7,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="1_app.js"></script>
-    <script src="6_decorators.js" type="text/javascript"></script>
+    <script defer src="6_decorators.js" type="text/javascript"></script>
 
 </head>
 
 <body>
+    <button id="b">Decorator</button>
+    <form action="">
+        <input type="text" name="" id="title" placeholder="title">
+        <input type="text" name="" id="price" placeholder="price(positive number)">
+        <button type="submit">Submit</button>
 
+    </form>
 </body>
 
 </html>
