removes the alternate validation

--- a/Typescript_Course/PROJECTS/MyManager/index.html
+++ b/Typescript_Course/PROJECTS/MyManager/index.html
@@ -23,7 +23,7 @@
       </div>
       <div class="form-control">
         <label for="people">People</label>
-        <input type="number" id="people" step="1" min="0" max="10" />
+        <input type="number" id="people" step="1" />
       </div>
       <button type="submit">ADD PROJECT</button>
     </form>
